Adrian's last name

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
           name: "W3C Credentials Community Group",
           url: "https://www.w3.org/community/credentials/",
         }],
-        authors: [{
-          name: "Manu Sporny",
-          url: "https://manu.sporny.org/",
-        },
+        authors: [
         {
           name: "Joe Andrieu",
           url: "https://www.joeandrieu.com",
@@ -30,7 +27,7 @@
           url: "",
         },
         {
-          name: "Adrian",
+          name: "Adrian Gropper",
           url: "",
         }],
         edDraftURI: "https://w3c-ccg.github.io/did-use-cases/",
