added "challenges" section to educational use case

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <h3>Description</h3>
         <p>When Sally earned her master&rsquo;s degree at  Oxford, she received a 
 			digital diploma which contained a decentralized identifier she provided. 
-			Over time, she updates the cryptographic material  associated with that 
+			Over time, she updates the cryptographic material associated with that 
 			DID to use her latest hardware wallet, with biometric protections and a 
 			quantum resistant algorithm. A decade after  graduation, she applies for 
 			a job in Japan, for which she provides her digital diploma by uploading 
@@ -182,6 +182,11 @@
 			claim, allowing the employer to rely on Sally&rsquo;s assertion that she 
 			earned a master&rsquo;s degree from Oxford. </p>
       </section>
+      <section>
+        <h3>Challenges</h3>
+        <p>Rotating keys without invalidating Sally's educational credentials and 
+			providing acceptable proof of education internationally.</p>
+</section>
       <section>
         <h3>Distinction</h3>
         <p>Oxford had no need to provide services for  resetting or updating Sally&rsquo;s username or password; they had no role in  managing Sally&rsquo;s changes to her authentication credentials. The potential  employer did not need to contact Oxford to verify Sally&rsquo;s claim of a master&rsquo;s  degree; they were able to verify the credential and authenticate Sally&rsquo;s  identity with information retrieved over the Internet. </p>
