fixed out of sync name for feature #9 cryptographic future proof

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         identifiers at multiple service providers without their activity being 
         tracked for collusion or third party embedded surveillance techniques like 
         cookies. (Anti-exploitation and Privacy).</dd>
-  <dt id="f9">9. Future proofing</dt>
+  <dt id="f9">9. Cryptographic future proofing</dt>
     <dd>These identifiers are capable of being updated as technology evolves. Current 
         cryptography techniques are known to be susceptible to quantum computational 
         attacks. Future-proofed identifiers provide a means to continue using the same 
