remove localBiblio because it broke rendering

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         // previousMaturity:  "WD",
 
         // extend the bibliography entries
-        localBiblio: ccg.localBiblio,
+        // localBiblio: ccg.localBiblio,
 
         github: "https://github.com/w3c-ccg/did-use-cases",
         includePermalinks: false,
