--- a/index.html
+++ b/index.html
@@ -38,17 +38,92 @@
     <section id="abstract">
       <p>
         Decentralized Identifiers (DIDs) allow for exceptional user-driven control 
-        and overall reliability. While DIDs share many features with extant identity systems,
-        no other system combines all the features designed into DIDs. Working with the
-        various organizations implementing and deploying this technology in
-        commercial environments, we have curated a set of use cases which illustrate
-          these features.</p>
+        and overall reliability of publicly resolvable, provable identifiers. While 
+        DIDs share many features with extant identity systems,
+        no other system combines all the features designed into DIDs. We present the 
+          current consensus of the motivations behind DIDs based on input and 
+          collaboration with implementers currently building products to the DID specification. 
+        </p>
         <p>
             <strong>Note:</strong><em>This document is still under development. 
             Please provide feedback via <a href="https://github.com/w3c-ccg/did-use-cases">Github</a></em>
       </p>
     </section>
     <section id="sotd"></section>
+    <section>
+        <h2>Introduction</h2>
+        <p>This document attempts to explain what you can do with DIDs and why you might care to use them. We start by describing the basic conceptual framework for DIDs, including basic terminology, followed by the actions one can take with a DID. Then we introduce the defining features and benefits of DIDs along with five focal use cases illustrating those features and benefits. 
+        </p>
+      </section>
+    <section>
+      <h2>What can you do with a DID?</h2>
+        <p>Decentralized  identifiers enable several key actions by individual actors. These actions are  the functional interface for working with DIDs and involve three entities. The Controller,  the Relying Party, and the Subject.</p>
+        <p>Controllers create  and control DIDs, while Relying Parties rely on DIDs as an identifier for  interactions related to the Subject.</p>
+        <p>The Subject is  the entity referred to by the DID, which can be literally anything: a person,  an organization, a device, a location, even a concept. Typically, the Subject is  also the Controller, but in cases of guardianship, agents (human or software),  and inanimate Subjects, this is not possible. As such, the Subject has no functional  role. When the Subject is, in fact, the Controller, we consider the action to  be taken by the Controller on their own behalf as the Subject. When the Subject  is not the Controller, the Controller is said to be taking action on behalf of the Subject, such as when an employee manages a DID on behalf of their employer  or a parent uses a DID on behalf of their child.</p>
+        <p>The Controller  and Relying Party may be an individuals or interactive systems, but for  simplicity in this document, we refer to both as if they were individual  persons performing these actions. </p>
+        <p>Only a Controller  can perform the actions that control a DID, however, anyone can act as a  Relying Party for any DID they know, including the Controller should they wish  to inspect or verify their own DID.</p>
+        <p>As a use case  document, we define these actions in terms of the eventual systems we  anticipate using this specification. The initial DID Working Group Charter only  covers the initial specification of the DID syntax itself and the syntax and  semantics of its associated DID Document. Together, these encode the information  necessary to eventually perform these various actions. Additional  specifications, such as DID Resolution and DID Auth (both under incubation in  the Credentials Community Group), will specify how these actions take place. There  has been interest expressed in standardizing how DIDs can be used for signing  and how those signatures are verified, however it is an open question as to  whether or not this capability should be a part of the DID Auth specification  or a separate work. This document captures these uses as design goals, but it is  anticipated that the DID Specification will not define how these actions are realized.</p>
+        <p>Perhaps the most salient point about Decentralized Identifiers is that there are no "Identity  Providers". Instead, this role is subsumed in the decentralized systems that Controllers  use to manage DIDs and, in turn, Relying Parties use to apply DIDs. These  decentralized systems, which we refer to as DID registries, are designed to  operate independently from any particular service provider and hence, free from  any given platform authority. Most current DID methods use distributed ledger technology (DLT) for their registries, for example, BTCR uses Bitcoin and ERC725  uses Ethereum. Some use alternative decentralized technologies, as IPID, which  uses IPFS. You may see the current DID Methods at the DID Method Registry (<a href="https://w3c-ccg.github.io/did-method-registry/">https://w3c-ccg.github.io/did-method-registry/</a>), maintained by the Credentials Community Group. </p>
+        <p>In practice, the definition and operation of all current decentralized systems retain some elements of centralized control. Depending on the criteria one uses to evaluate  such systems—from who controls the most widely used code base to who controls  the specification—where a system resides on the spectrum of centralized and decentralized varies. However, the design of DIDs is a separate matter from the  academic debate about how decentralized any particular DID registry is.</p>
+        <p>The DID methods specified in each DID MAY define how one performs these actions, including the  mechanism(s) for interacting with any particular DID registry. Not all of these  actions are supported by all DID methods. Which actions are required is an open  question. Similarly, it remains an open question whether or not all DID methods  should be required to be decentralized. As mentioned previously, this quickly becomes  an academic debate about the definition of decentralized, which we leave as an  exercise for the reader. Therefore, each DID method and DID registry should be  evaluated on its own merits as to precisely how decentralized it may or may not  be relative to its anticipated use. </p>
+        <p>DIDs, DID methods,  DID registries, and DID Documents are anticipated design elements in the DID  specification. For illustration we use these elements in this document. When we  refer to methods and registries, we mean DID methods and DID registries. All  DIDs resolve to DID Documents. DID Documents contain the cryptographic material  to perform the functions related to that particular DID, including associated  proof methods and service endpoints. When working with DIDs, the DID Document  is first resolved, then further dereferencing may return a resource, as is  typical for URLs. We use this design framework to describe DID actions.</p>
+      </section>
+      <section>
+      <h2>DID Actions</h2>
+        <p>Here are the  eleven (13) actions currently supported by DIDs as envisioned by Credentials  Community Group and as intended in the DID Working Group Charter. </p>
+        <p>In the diagram,  we have grouped the actions by Create, Read, Update, and Delete (CRUD) as well  as Use.</p>
+            <img src="images/did_actions.png"/>
+      <section>
+        <h2>Create</h2>
+        <p>Controllers create DIDs, uniquely binding cryptographic  proofs with the identifier, typically using public-private key-pairs. These  DIDs are recorded in a registry in such a manner as to be able to resolve to a  DID Document. The DID Document may be dynamically and deterministically  generated through resolution or it may be explicitly constructed as a  stand-alone resource and either stored or referenced in the registry. This  process needs access to the registry, ideally a decentralized system, and like  the rest of the DID CRUD actions, can be performed without interaction with any  particular authority.</p>
+        </section>
+        <section>
+            <h2>Present</h2>
+        <p>DIDs are URIs, which is to say a string of characters. As  such, they may be presented in the same manner as URIs, by simply transmitting  or presenting that string of characters. DIDs, however are not designed to be  human readable. They invariably contain long, complex numbers represented in  various formats. For ease of use, implementations often rely on QR codes for  ease of capture using a camera-enabled device such as a smart phone.</p>
+        </section>
+        <section>
+        <h2>Authenticate</h2>
+        <p>Relying Parties may wish to prove that the individual  presenting a DID is in fact its controller or specified as a Controller for a  particular service endpoint. This authentication process uses the cryptographic  material in the DID Document to test if the claimed Controller can, in fact, prove  control, typically through some sort of challenge-response. Some DID Documents  and methods allow for separate, proofs for different service endpoints,  distinct from update and delete actions. This separation allows transactional  proofs that are expected to be used frequently, while controlling proofs are  used rarely.</p>
+        </section>
+            <section>
+        <h2>Sign</h2>
+        <p>Using cryptographic material associated with that found in a  DID Document, DID Controllers may sign digital assets or documents. This  signature can later be verified (#7 Signature Verification) to demonstrate the  authenticity of the asset. In this way, we may referred to the asset as "signed  by the DID".</p>
+        </section>
+        <section>
+        <h2>Resolve</h2>
+        <p>The first step in using a DID for anything other than  presentation is to resolve the DID to a specific DID Document, to reveal the  cryptographic material and service endpoints associated with that DID. How this  occurs is method-specific and currently under development in the DID Resolution  specification. </p>
+        </section>
+        <section>
+        <h2>Dereference</h2>
+        <p>Dereferencing a DID uses the material in its DID Document to  return a resource. By default, dereferencing a DID without a reference to service  endpoint returns the DID Document itself. When a DID contains a service name,  dereferencing returns the resource pointed to from the named service endpoint,  which was discovered by resolving the DID to its DID Document and looking up  the endpoint by name. In this way, a Relying Party may dynamically discover and  interact with the current service endpoints for a given DID.</p>
+        </section>
+        <section>
+        <h2>Verify Signature</h2>
+        <p>Given a digital asset signed by a DID, a Relying Party may  use the cryptographic material in the DID Document to verify the signature.</p>
+        <h2>Rotate</h2>
+        <p>Controllers may rotate the cryptographic material for a DID  by updating the DID Document as recorded in its registry. Different methods  handle this differently, but the result is an update to the core cryptographic  proof required to prove control of the DID and the DID Document.</p>
+        </section>
+        <section>
+        <h2>Modify Service Endpoint</h2>
+        <p>Controllers may change service endpoints associated with a  DID, including the proof mechanism for authenticating as the Subject for any  given endpoint. The process for doing this is method specific, but is designed  to allow Controllers to make these change without necessarily changing the  primary proof mechanism for control of the DID itself.</p>
+        </section>
+        <section>
+        <h2>Forward / Migrate</h2>
+        <p>To support interoperability, some methods provide a way for  controllers to record in the registry (by updating the DID Document), that the  DID should be redirected to another DID, which now has full authority to represent  the originating DID. This mechanism allows DID controllers to migrate a DID  from one method or registry to another.</p>
+        </section>
+        <section>
+        <h2>Recover</h2>
+        <p>Some methods provide means for recovering control of a DID  if its existing private cryptographic material is lost. These means vary by  method but can include social recovery, multi-sig, Shamir sharing, or pre-rotated  keys. In general, recovery triggers a rotation to a new proof, allowing the  Controller of that new proof to recover control of the DID without interacting  with any Relying Parties.</p>
+        </section>
+        <section>
+        <h2>Audit</h2>
+        <p>Some methods provide an explicit audit trail of all CRUD  actions on that DID, including a timestamp for when the actions took place. For  distributed ledger-based registries, this audit trail is fundamental to the way  the ledgers record transactions. This allows relying parties to see, for  example, how recently a DID was rotated or its service endpoints updated, which  may inform certain analytics regarding the reliability of the DID's  cryptographic material.</p>
+        </section>
+        <section>
+        <h2>Revoke</h2>
+        <p>Instead of deleting a DID, Controllers can revoke a DID such  that downstream processes like authentication and dereferencing are no longer functional.  Most decentralized systems cannot guarantee actual deletion of a record.  Indeed, distributed ledgers are often touted as "immutable". Methods define  revocation processes to achieve the same effect as deletion. The mechanisms for  revocation vary based on the method.</p>
+        </section>
+    </section>
     <section>
 	<h2>Feature/Benefit Grid</h2>
 		<p>In collecting and evaluating potential use cases, we have 
