added "early" to the state of development of this document.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           collaboration with implementers currently building products to the DID specification. 
         </p>
         <p>
-            <strong>Note:</strong><em>This document is still under development. 
+            <strong>Note:</strong><em>This document is still in early development. 
             Please provide feedback via <a href="https://github.com/w3c-ccg/did-use-cases">Github</a></em>
       </p>
     </section>
