Update index.html (#8)
Minor spelling fix

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           None of these numbers enable an organization to self-issue an
           identifier or to use the number to cryptographically authenticate or
           digitally sign agreements. A great number of business to business
-          and business to custome transactions could be executed more quickly
+          and business to customer transactions could be executed more quickly
           and with greater assurance of the validity of the transaction if a
           mechanism to self-issue cryptographic identifiers were created.
         </p>
