added "required" to the Feature section title

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 </table>
   </section>
   <section>
-  <h2>Features</h2>
+  <h2>Required Features</h2>
 	  <dl id="feature_definitions">
   <dt id="f1">1. Inter-jurisdictional</dt>
 	<dd>Inter-jurisdictional identifiers do not depend on the legal jurisdiction 
